# Telegram-Toolkit

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  main.py
src/api/: __init__.py  app.py
src/api/routes/: analytics.py  archives.py  auth.py  chats.py  commands.py  llm.py  media.py  profiles.py  sessions.py  users.py  websocket.py
src/core/: __init__.py  config.py  database.py  encryption.py
src/models/: __init__.py  archive.py  chat.py  event.py  media.py  message.py  session.py  user.py  user_profiles.py
src/services/: auto_responder.py  clone_service.py  command_runner.py  encryption_service.py  export_service.py  message_encryption.py  personality_service.py  profile_service.py
src/telegram/: __init__.py  client.py  session_manager.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: auth.ts
web/src/components/: AccountSwitcher.tsx  Layout.tsx  Sidebar.tsx
web/src/components/common/: SkeletonLoader.tsx
web/src/pages/: Analytics.tsx  Archives.tsx  Auth.tsx  Automation.tsx  Chats.tsx  Dashboard.tsx  GlobalSearch.tsx  RawCommands.tsx  Settings.tsx  Users.tsx
