[project]
name = "telegram-toolkit"
version = "0.1.0"
description = "A comprehensive Telegram toolkit for power users, developers, and security researchers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Telegram Toolkit", email = "dev@example.com"}
]
keywords = ["telegram", "mtproto", "automation", "monitoring", "analytics"]

dependencies = [
    # Telegram
    "telethon>=1.34.0",
    
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    
    # CLI
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    
    # Config & Utils
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Encryption
    "cryptography>=41.0.0",
    
    # LLM
    "aiohttp>=3.9.0",
    "google-generativeai>=0.3.0",
    "openai>=1.10.0",
    
    # QR Code
    "qrcode[pil]>=7.4.0",
    
    # Utilities
    "python-dateutil>=2.8.0",
    "humanize>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
turso = [
    "libsql-experimental>=0.0.30",
]

[project.scripts]
tgtk = "src.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
